--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DATABASE_HOST= localhost
 DATABASE_USER = appuser
 DATABASE_PASSWORD =app2027
 DATABASE_DB = sql_login
+JWT_SECRET = randomsecretkey7
+JWT_EXPIRES = 90d
+COOKIE_EXPIRES = 90
